# torc

./: Cargo.toml  LICENSE  Makefile  README.md
archlinux/: install.sh
debian/: install.sh
src/: main.rs  main.rs.backup
tests/: cli.rs
