[package]
name = "torc"
version = "0.1.3"
edition = "2021"
authors = ["sg1.kritik@gmail.com>"]
description = "A Rust CLI application to connect your system to the Tor network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nzkritik/torc"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
sysinfo = { version = "0.30", default-features = false }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.1.14"
crossterm = "0.27"

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "torc"
path = "src/main.rs"
